--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </p>
           </div>
           <div class="main_image">
-            <img src="image/shoes.png" />
+            <img src="shoes.png" />
           </div>
         </div>
         <div class="social_icon">
@@ -189,7 +189,7 @@
           </div>
 
           <div class="image">
-            <img src="image/ao5-removebg-preview.png" />
+            <img src="ao5-removebg-preview.png" />
           </div>
 
           <div class="products_text">
@@ -217,7 +217,7 @@
           </div>
 
           <div class="image">
-            <img src="image/ao6-removebg-preview.png" />
+            <img src="ao6-removebg-preview.png" />
           </div>
 
           <div class="products_text">
