--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nguyễn Hữu Bảo</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="image/logo.png" />
+    <link rel="shortcut icon" href="logo.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -80,7 +80,7 @@
           </div>
 
           <div class="image">
-            <img src="image/ao1-removebg-preview.png" />
+            <img src="ao1-removebg-preview.png" />
           </div>
 
           <div class="products_text">
@@ -105,7 +105,7 @@
           </div>
 
           <div class="image">
-            <img src="image/ao2-removebg-preview.png" />
+            <img src="ao2-removebg-preview.png" />
           </div>
 
           <div class="products_text">
@@ -133,7 +133,7 @@
           </div>
 
           <div class="image">
-            <img src="image/ao3-removebg-preview.png" />
+            <img src="ao3-removebg-preview.png" />
           </div>
 
           <div class="products_text">
@@ -161,7 +161,7 @@
           </div>
 
           <div class="image">
-            <img src="image/ao4-removebg-preview.png" />
+            <img src="ao4-removebg-preview.png" />
           </div>
 
           <div class="products_text">
@@ -242,7 +242,7 @@
           </div>
 
           <div class="image">
-            <img src="image/ao7-removebg-preview.png" />
+            <img src="ao7-removebg-preview.png" />
           </div>
 
           <div class="products_text">
@@ -270,7 +270,7 @@
           </div>
 
           <div class="image">
-            <img src="image/ao8-removebg-preview.png" />
+            <img src="ao8-removebg-preview.png" />
           </div>
 
           <div class="products_text">
@@ -302,14 +302,14 @@
       <div class="about_main">
         <div class="about_image">
           <div class="about_small_image">
-            <img src="image/red_shoes1.png" onclick="functio(this)" />
-            <img src="image/red_shoes2.png" onclick="functio(this)" />
-            <img src="image/red_shoes3.png" onclick="functio(this)" />
-            <img src="image/red_shoes4.png" onclick="functio(this)" />
+            <img src="red_shoes1.png" onclick="functio(this)" />
+            <img src="red_shoes2.png" onclick="functio(this)" />
+            <img src="red_shoes3.png" onclick="functio(this)" />
+            <img src="red_shoes4.png" onclick="functio(this)" />
           </div>
 
           <div class="image_contaner">
-            <img src="image/red_shoes1.png" id="imagebox" />
+            <img src="red_shoes1.png" id="imagebox" />
           </div>
         </div>
 
@@ -356,7 +356,7 @@
           <div class="card_top">
             <div class="profile">
               <div class="profile_image">
-                <img src="image/girl_dp1.jpg" />
+                <img src="girl_dp1.jpg" />
               </div>
 
               <div class="name">
@@ -386,7 +386,7 @@
           <div class="card_top">
             <div class="profile">
               <div class="profile_image">
-                <img src="image/man_dp1.jpg" />
+                <img src="man_dp1.jpg" />
               </div>
 
               <div class="name">
@@ -416,7 +416,7 @@
           <div class="card_top">
             <div class="profile">
               <div class="profile_image">
-                <img src="image/man_dp2.jpg" />
+                <img src="man_dp2.jpg" />
               </div>
 
               <div class="name">
@@ -448,7 +448,7 @@
           <div class="card_top">
             <div class="profile">
               <div class="profile_image">
-                <img src="image/gir_dp3.jpg" />
+                <img src="gir_dp3.jpg" />
               </div>
 
               <div class="name">
@@ -478,7 +478,7 @@
           <div class="card_top">
             <div class="profile">
               <div class="profile_image">
-                <img src="image/gir_dp2.jpg" />
+                <img src="gir_dp2.jpg" />
               </div>
 
               <div class="name">
@@ -508,7 +508,7 @@
           <div class="card_top">
             <div class="profile">
               <div class="profile_image">
-                <img src="image/man_dp3.jpg" />
+                <img src="man_dp3.jpg" />
               </div>
 
               <div class="name">
@@ -566,7 +566,7 @@
 
     <div class="login_form">
       <div class="left">
-        <img src="image/logshoes.png" />
+        <img src="logshoes.png" />
       </div>
 
       <div class="right">
@@ -594,9 +594,9 @@
 
           <button type="submit">Login</button>
           <div class="loging_icon">
-            <a href="#"><img src="image/google.png" /></a>
-            <a href="#"><img src="image/facebook.png" /></a>
-            <a href="#"><img src="image/twitter.png" /></a>
+            <a href="#"><img src="google.png" /></a>
+            <a href="#"><img src="facebook.png" /></a>
+            <a href="#"><img src="twitter.png" /></a>
           </div>
         </form>
       </div>
